<resources>
    <string name="app_name">Book Expo</string>

    <!--Strings for navigation drawer-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--Navigation menu item-->
    <string name="home">Home</string>
    <string name="my_library">My Library</string>
    <string name="about_developer">About Developer</string>
    <string name="about_app">About App</string>

    <!--Content description-->
    <string name="book_cover">Book cover</string>

    <!--BookDetailsFragment-->
    <string name="authors">Authors</string>
    <string name="publisher">Publisher</string>
    <string name="year">Year</string>
    <string name="pages">Pages</string>
    <string name="description">Description</string>

    <!--Toolbar Title-->
    <string name="title_home">@string/app_name</string>
    <string name="title_book_details">Book Details</string>

</resources>